# cdd

./: build.bat  cdd.cabal  stack.yaml
Test/: test0.cdd
src/: CddLexer.hs  CddParser.hs  CppGenerator.hs  CppHelper.hs  Helper.hs  Language.hs  Main.hs
src/Template/: ClientInterfaceCpp.hs  ClientProxyCpp.hs  MethodIdsHeader.hs
