
name:                cdd
version:             0.0.0.0
category:            Text
build-type:          Simple
cabal-version:       >=1.2

executable cdd
  main-is:             Main.hs
  build-depends:       base >=4.7,
                       bytestring >=0.10.6.0,
                       parsec >=3.1.9,
                       mtl >=2.1.3.1,
                       StringEngine >=0.0.0.2

  hs-source-dirs:      src
  other-modules:
        Helper
        CddLexer
        CddParser
        Language
        CppHelper
        Template.ClientInterfaceCpp
